fixed the cards on mobile version 2

--- a/pricing card css mini-project/styles.css
+++ b/pricing card css mini-project/styles.css
@@ -36,6 +36,7 @@ li {
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
+  margin: 50px;
   gap: 30px;
   padding: 3rem;
   background-color: #f8fafe;
@@ -48,14 +49,22 @@ li {
 
 .card {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
   min-width: 250px;
-  height: 600px;
   background-color: #fff;
   border-radius: 8px;
   padding: 20px;
   margin-bottom: 20px;
   text-align: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+@media (max-width: 1024px) {
+  .card {
+    height: 600px;
+  }
 }
 
 .card h2 {
